# LogAnalyzer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/args_struct/: args_struct.hpp  functions.cpp
src/args_struct_new/: args_struct.hpp  functions.cpp  struct.cpp
src/error_logs/: error_logs.hpp  functions.cpp  struct.cpp
src/log_parser/: functions.cpp  log_parser.hpp
src/strs/: methods.cpp  strs.hpp
src/time_stamp/: functions.cpp  time_stamp.hpp
